feat: :sparkles: Creacion del componente track-list

--- a/index.html
+++ b/index.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/styles.css">
+    <script type="module" defer src="./src/js/components/Track.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="container">
-        <div class="discover"></div>
+        <div class="discover">
+            <div></div>
+            <div class="trackList trackList--discover">
+                <track-list></track-list>
+            </div>
+        </div>
         <div class="reproductor"></div>
-        <div class="trackList"></div>
+        <div class="trackList">
+            <track-list></track-list>
+        </div>
     </div>
 </body>
 </html>
