feat: :sparkles: Creacion del componente de nueva musica

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/styles.css">
     <script type="module" defer src="./src/js/components/Track.js"></script>
+    <script type="module" defer src="./src/js/components/NewMusic.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="container">
         <div class="discover">
-            <div></div>
+            <div class="newMusic">
+                <new-music></new-music>
+            </div>
             <div class="trackList trackList--discover">
-                <track-list></track-list>
+                <!-- <track-list></track-list> -->
             </div>
         </div>
         <div class="reproductor"></div>
