feat: :sparkles: configuracion de la catidad de requests que se pueden hacer
Se agregan estilos faltantes

--- a/index.html
+++ b/index.html
@@ -21,16 +21,19 @@
         <div class="container">
             <div class="discover">
                 <div class="newMusic">
+                    <h1>New Music</h1>
                     <new-music></new-music>
                 </div>
                 <div class="trackList trackList--discover">
-                    <!-- <track-list></track-list> -->
+                    <h2>Track list</h2>
+                    <track-list></track-list>
                 </div>
             </div>
             <div class="reproductor">
                 <mi-reproductor></mi-reproductor>
             </div>
             <div class="trackList">
+                <h2>Track list</h2>
                 <track-list></track-list>
             </div>
         </div>
