feat: :sparkles: Configuracion del puerto y host

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
                 <track-list></track-list>
             </div>
         </div>
+        <!-- <script type="module" src="./src/js/index.js"></script> -->
     </body>
 </html>
